add structure changes

--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "mainprojects",
   "version": "1.0.0",
   "description": "a backend project of videoStream platform at chai aur Code ",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
+
   },
   "keywords": [
     "javascript",
@@ -12,5 +14,8 @@
     "chai"
   ],
   "author": "Aryan kumar",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  }
 }
