--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js"
-
   },
   "keywords": [
     "javascript",
@@ -16,6 +15,7 @@
   "author": "Aryan kumar",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "prettier": "^3.2.5"
   }
 }
